--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head>                                                                      
+<!DOCTYPE html>																		
+<html>
+<head>                                                                      
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet">                                                                        
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">                                                                     
     <link rel="stylesheet" href="style.css">                                                                        
